Correcciones de posibles Bugs marcados por el findBug